# project-dynamoAi1

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/personal_assistant/: __main__.py  constants.py
src/personal_assistant/books/: address_book.py  notes_book.py
src/personal_assistant/cli/: command_suggester.py  commands.py  completer.py  parser.py
src/personal_assistant/models/: fields.py  note.py  record.py
src/personal_assistant/storage/: json_storage.py
src/personal_assistant/utils/: decorators.py  formatters.py  validators.py
tests/: conftest.py  test_address_book.py  test_cli_helpers.py  test_fields.py  test_interactive_cancel.py  test_notes_book.py  test_storage.py
